--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
   <header>
-    <img src="assets/images/portrait.jpg" height="200px" width="200px" alt="Portrait of Lehi Sanchez">
+    <img src="assets/images/portrait.jpg" height="200" width="200" alt="Portrait of Lehi Sanchez">
     <h1>Lehi Sanchez</h1>
   </header>
 
