Added medium breaking point

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 
   <link rel="stylesheet" href="assets/stylesheets/normalize.css">
   <link rel="stylesheet" href="assets/stylesheets/main.css">
+  <link rel="stylesheet" href="assets/stylesheets/medium.css">
 </head>
 
 <body>
 
   <header>
-    <img src="assets/images/portrait.jpg" alt="Portrait of Lehi Sanchez">
     <h1>Lehi Sanchez</h1>
+    <img src="assets/images/portrait.jpg" alt="Portrait of Lehi Sanchez">
   </header>
 
   <main>
