--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -3,21 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lehi Sanchez | Design Principles Document</title>
+    <title>Lehi Sanchez | Design Principles</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <header>
-        <h1>Design Principles Document</h1>
+        <h1>Design Principles</h1>
         <p>Lehi Sanchez</p>
     </header>
     <main>
         <article>
-            <h2>Repetition</h2>
+            <h2>White Space and Clean Design</h2>
+            <img src="images/apple.png">
+            <p>
+                Apple is known for their simple and elegant design. Their website showcases their products using white and black backgrounds and plenty of whitespace. Against simple backgrounds, their products pop. Text is simple and the contrast is pleasing to the eyes.
+            </p>
         </article>
         <article>
-            <h2>Rule of Thirds</h2>
+            <h2>PARC: Repetition</h2>
+            <img src="images/amazon.png">
+        </article>
+        <article>
+            <h2>PARC: Proximity</h2>
+            <img src="images/peacock.png">
         </article>
     </main>
     <footer>
