--- a/index.html
+++ b/index.html
@@ -24,11 +24,7 @@
   <main>
     <h2>WDD-230: Assignment Portal</h2>
     <ul>
-      <li>Lesson 01: <a href="#">Assignment Link</a></li>
-      <li>Lesson 02: <a href="#">Assignment Link</a></li>
-      <li>Lesson 03: <a href="#">Assignment Link</a></li>
-      <li>Lesson 04: <a href="#">Assignment Link</a></li>
-      <li>Lesson 05: <a href="#">Assignment Link</a></li>
+      <li>Lesson 02: <a href="lesson2/design-principles.html">Design Principles</a></li>
     </ul>
   </main>
 
