--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -23,10 +23,12 @@
         <article>
             <h2>PARC: Repetition</h2>
             <img src="images/amazon.png">
+            <p>Amazon's Children's Books page features repeating images of little children. Age groups are repeated in ascending order.</p>
         </article>
         <article>
             <h2>PARC: Proximity</h2>
             <img src="images/peacock.png">
+            <p>PeacockTV's sign up form elements are neatly aligned and pleasing to the eye. This helps the user navigate the form and understand what they are doing. It is a text heavy page and everything is naturally aligned to the left. </p>
         </article>
     </main>
     <footer>
