--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -15,19 +15,20 @@
     <main>
         <article>
             <h2>White Space and Clean Design</h2>
-            <img src="images/apple.png">
+
+            <img src="images/apple.PNG">
             <p>
                 Apple is known for their simple and elegant design. Their website showcases their products using white and black backgrounds and plenty of whitespace. Against simple backgrounds, their products pop. Text is simple and the contrast is pleasing to the eyes.
             </p>
         </article>
         <article>
             <h2>PARC: Repetition</h2>
-            <img src="images/amazon.png">
+            <img src="images/amazon.PNG">
             <p>Amazon's Children's Books page features repeating images of little children. Age groups are repeated in ascending order.</p>
         </article>
         <article>
             <h2>PARC: Proximity</h2>
-            <img src="images/peacock.png">
+            <img src="images/peacock.PNG">
             <p>PeacockTV's sign up form elements are neatly aligned and pleasing to the eye. This helps the user navigate the form and understand what they are doing. It is a text heavy page and everything is naturally aligned to the left. </p>
         </article>
     </main>
