fixed img issue

--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -15,20 +15,22 @@
     <main>
         <article>
             <h2>White Space and Clean Design</h2>
-
-            <img src="images/apple.PNG">
+            <a href="https://www.apple.com/ipad/">Apple</a>
+            <img src="images/apple.PNG" alt="Apple Screenshot">
             <p>
-                Apple is known for their simple and elegant design. Their website showcases their products using white and black backgrounds and plenty of whitespace. Against simple backgrounds, their products pop. Text is simple and the contrast is pleasing to the eyes.
+                Apple's website is clean and filled with plenty of whitespace. They take pride in the design of their products and are always bragging that their products look beautiful because of "what they left out of the design". A simple, clean website with lots of whitespace conveys that message. The whitespace allows the products designs to "pop".
             </p>
         </article>
         <article>
             <h2>PARC: Repetition</h2>
-            <img src="images/amazon.PNG">
-            <p>Amazon's Children's Books page features repeating images of little children. Age groups are repeated in ascending order.</p>
+            <a href="https://www.amazon.com/gp/browse.html?node=4&ref_=nav_em__cbo_t3_0_2_11_3">Amazon</a>
+            <img src="images/amazon.PNG" alt="Amazon Screenshot">
+            <p>Amazon's Children's Books page features repeating images of little children and age group categories. Repetiton is important when shopping because often you have to drill down as you're seaching for a product. Repeating the navigation controls to the user allows them to think less about how to get to a product. </p>
         </article>
         <article>
             <h2>PARC: Proximity</h2>
-            <img src="images/peacock.PNG">
+            <a href="https://www.peacocktv.com/freesignup">PeacockTV</a>
+            <img src="images/peacock.PNG" alt="PeacockTV Screenshot">
             <p>PeacockTV's sign up form elements are neatly aligned and pleasing to the eye. This helps the user navigate the form and understand what they are doing. It is a text heavy page and everything is naturally aligned to the left. </p>
         </article>
     </main>
