--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -1,11 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lehi Sanchez | Lesson 3</title>
+    <title>Lehi Sanchez | WeatherBee Site Plan</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-    
+    <header>
+        <div id="logo">
+            <img src="images/logo.png" alt="WeatherBee Logo">
+        </div>
+        <h1>WeatherBee</h1>
+        <span id="url">https://weatherbee.io</span>
+        <span id="subtitle">Website Planning Document</span>
+        
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="target-audience.html">Target Audience</a></li>
+            <li><a href="color-scheme.html">Color Scheme</a></li>
+            <li><a href="typography.html">Typography</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <section>
+            <h2>Colors</h2>
+            <img src="images/colors.png" alt="Color Scheme">
+        </section>
+        <section>
+            <h2>Use</h2>
+            <p>Colors will be very important on WeatherBee. The main page of the website will change colors depending on the temperature outside. Warm colors for warmer weather and cooler colors for colder weather. Brighter colors will be used to highlight fun facts and important information.</p>
+        </section>
+    </main>
+
+    <footer>
+        <div class="copyright">&copy; <span id="copyright-year"></span> | Lehi Sanchez | Maryland | <a
+                href="https://www.byui.edu/online">BYUI Learning Online</a></div>
+        <div class="updated">Last updated: <span id="modified-date"></span></div>
+    </footer>
+
+    <script src="js/scripts.js"></script>
 </body>
+
 </html>
