--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -1,11 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lehi Sanchez | Lesson 3</title>
+    <title>Lehi Sanchez | WeatherBee Site Plan</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-    
+    <header>
+        <div id="logo">
+            <img src="images/logo.png" alt="WeatherBee Logo">
+        </div>
+        <h1>WeatherBee</h1>
+        <span id="url">https://weatherbee.io</span>
+        <span id="subtitle">Website Planning Document</span>
+        
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="target-audience.html">Target Audience</a></li>
+            <li><a href="color-scheme.html">Color Scheme</a></li>
+            <li><a href="typography.html">Typography</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <section>
+            <h2>Target Audiences</h2>
+            <p>The target audiences for WeatherBee are children between the ages of 5-10 and their parents.</p>
+        </section>
+        <section>
+            <h2>Mija - Age 7</h2>
+            <p>Penelope wants to find out everything she can about the weather but all of the websites her parents use are too cluttered and confusing. She navigates to WeatherBee because it's easy to find the information she want, and she loves the colors.</p>
+            <p>On any given day, Penelope might visit WeatherBee to find answers to the following questions:
+                <ul>
+                    <li>How cold is it outside right now?</li>
+                    <li>Do I need to bring an umbrella with me?</li>
+                    <li>Will it be a nice day tomorrow?</li>
+                    <li>What does hail look like and how is it formed?</li>
+                    <li>When time will the sunrise tomorrow?</li>
+                </ul>
+            </p>
+        </section>
+        <section>
+            <h2>Papi (Mija's Dad)</h2>
+            <p>Papi doesn't know much about the weather. He wants to teach his children about the weather but he finds it hard to translate the super technical articles found on weather websites. Papi needs a website he can share with his children.</p>
+            <p>
+                On any given day, Papi might visit WeatherBee to find resources to help with the following situations:
+
+                <ul>
+                    <li>His children want to know what the weather is like but they want to do it themselves.</li>
+                    <li>His children want to learn more about Warm and Cold fronts.</li>
+                    <li>His children want to know what they should wear today.</li>
+                    <li>He wants to plan a trip to watch the sunset with his family but needs to know when the sun will be setting.</li>
+                    <li>He wants to let his children explore a website that will present simplified information for young children.</li>
+                </ul>
+            </p>
+        </section>
+    </main>
+
+    <footer>
+        <div class="copyright">&copy; <span id="copyright-year"></span> | Lehi Sanchez | Maryland | <a
+                href="https://www.byui.edu/online">BYUI Learning Online</a></div>
+        <div class="updated">Last updated: <span id="modified-date"></span></div>
+    </footer>
+
+    <script src="js/scripts.js"></script>
 </body>
+
 </html>
