--- a/index.html
+++ b/index.html
@@ -9,22 +9,23 @@
 
   <title>Lehi Sanchez | WDD-230 Assignment Portal</title>
 
-  <link rel="stylesheet" href="assets/stylesheets/normalize.css">
-  <link rel="stylesheet" href="assets/stylesheets/main.css">
-  <link rel="stylesheet" href="assets/stylesheets/medium.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/medium.css">
 </head>
 
 <body>
 
   <header>
     <h1>Lehi Sanchez</h1>
-    <img src="assets/images/portrait.jpg" alt="Portrait of Lehi Sanchez">
+    <img src="images/portrait.jpg" alt="Portrait of Lehi Sanchez">
   </header>
 
   <main>
     <h2>WDD-230: Assignment Portal</h2>
     <ul>
       <li>Lesson 02: <a href="lesson2/design-principles.html">Design Principles</a></li>
+      <li>Lesson 03: <a href="lesson3/index.html">Website Planning Document</a></li>
     </ul>
   </main>
 
@@ -33,8 +34,7 @@
     <div class="updated">Last updated: <span id="modified-date"></span></div>
   </footer>
 
-  <script src="assets/scripts/main.js"></script>
-  <script src="" type=""></script>
+  <script src="js/main.js"></script>
 
 </body>
 
