--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -1,43 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="images/favicon.png" sizes="32x32">
-    <title>Lehi Sanchez | Lesson 3</title>
+    <title>Lehi Sanchez | WeatherBee Site Plan</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
     <header>
         <div id="logo">
-            <img src="images/logo.png" alt="logo">
+            <img src="images/logo.png" alt="WeatherBee Logo">
         </div>
-        <div id="navigation">
-            <ul>
-                <li><a href="#">Audience</a></li>
-                <li><a href="#">Colors</a></li>
-                <li><a href="#">Typography</a></li>
-            </ul>
-        </div>
-        <div id="current-temperature">73&#176;</div>
-    </header>
-    <header>
-        <nav>
-            
-
-        </nav>
-        <div id="current-weather">
-            <h1>73&#176;</h1>
-        </div>
+        <h1>WeatherBee</h1>
+        <span id="url">https://weatherbee.io</span>
+        <span id="subtitle">Website Planning Document</span>
+        
     </header>
 
-    <div id="main-navigation">
+    <nav>
         <ul>
-            <li>Audience</li>
-            <li>Colors</li>
-            <li>Typography</li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="target-audience.html">Target Audience</a></li>
+            <li><a href="color-scheme.html">Color Scheme</a></li>
+            <li><a href="typography.html">Typography</a></li>
         </ul>
-    </div>
+    </nav>
+
+    <main>
+        <section>
+            <h2>Name</h2>
+            <p>The name of the weather website is WeatherBee.</p>
+        </section>
+        <section>
+            <h2>Purpose</h2>
+            <p>The purpose of WeatherBee is to provide a child-friendly weather website. Most weather websites are full of a lot of content and a lot of data. This can make it hard for little children to parse. WeatherBee is focused on keeping things simple and visually fun for young children.</p>
+            <p>The second purpose is to provide educational content for children who want to learn more about the weather.</p>
+        </section>
+        <section>
+            <h2>Domain Name</h2>
+            <p>https://weatherbee.io</p>
+        </section>
+        <section>
+            <h2>Logo</h2>
+            <img id="logo-demo" src="images/logo.png" alt="WeatherBee Logo">
+        </section>
+    </main>
+
+    <footer>
+        <div class="copyright">&copy; <span id="copyright-year"></span> | Lehi Sanchez | Maryland | <a
+                href="https://www.byui.edu/online">BYUI Learning Online</a></div>
+        <div class="updated">Last updated: <span id="modified-date"></span></div>
+    </footer>
+
+    <script src="js/scripts.js"></script>
 </body>
+
 </html>
