--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -1,11 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lehi Sanchez | Lesson 3</title>
+    <title>Lehi Sanchez | WeatherBee Site Plan</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-    
+    <header>
+        <div id="logo">
+            <img src="images/logo.png" alt="WeatherBee Logo">
+        </div>
+        <h1>WeatherBee</h1>
+        <span id="url">https://weatherbee.io</span>
+        <span id="subtitle">Website Planning Document</span>
+        
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="target-audience.html">Target Audience</a></li>
+            <li><a href="color-scheme.html">Color Scheme</a></li>
+            <li><a href="typography.html">Typography</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <section id="typography">
+            <h2>Typography</h2>
+            <p>Two fonts are utilized on the website: Roboto and Open Sans.</p>
+            <ul>
+                <li id="typography-sample-site-header">Site Header</li>
+                <li id="typography-sample-h1">Heading 1 (h1)</li>
+                <li id="typography-sample-h2">Heading 2 (h2)</li>
+                <li id="typography-sample-h3">Heading 3 (h3)</li>
+                <li id="typography-sample-primary-link">Primary Navigation Link</li>
+                <li id="typography-sample-footer-link">Footer Navigation</li>
+                <li id="typography-sample-p">Paragraph (p)</li>
+            </ul>
+        </section>
+    </main>
+
+    <footer>
+        <div class="copyright">&copy; <span id="copyright-year"></span> | Lehi Sanchez | Maryland | <a
+                href="https://www.byui.edu/online">BYUI Learning Online</a></div>
+        <div class="updated">Last updated: <span id="modified-date"></span></div>
+    </footer>
+
+    <script src="js/scripts.js"></script>
 </body>
+
 </html>
