Fixed HTML Validations

--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -17,7 +17,7 @@
         <h1>WeatherBee</h1>
         <span id="url">https://weatherbee.io</span>
         <span id="subtitle">Website Planning Document</span>
-        
+
     </header>
 
     <nav>
@@ -36,13 +36,14 @@
         </section>
         <section>
             <h2>Use</h2>
-            <p>Colors will be very important on WeatherBee. The main page of the website will change colors depending on the temperature outside. Warm colors for warmer weather and cooler colors for colder weather. Brighter colors will be used to highlight fun facts and important information.</p>
+            <p>Colors will be very important on WeatherBee. The main page of the website will change colors depending on
+                the temperature outside. Warm colors for warmer weather and cooler colors for colder weather. Brighter
+                colors will be used to highlight fun facts and important information.</p>
         </section>
     </main>
 
     <footer>
-        <div class="copyright">&copy; <span id="copyright-year"></span> | Lehi Sanchez | Maryland | <a
-                href="https://www.byui.edu/online">BYUI Learning Online</a></div>
+        <div class="copyright">&copy; <span id="copyright-year"></span> | Lehi Sanchez | Maryland | <a href="https://www.byui.edu/online">BYUI Learning Online</a></div>
         <div class="updated">Last updated: <span id="modified-date"></span></div>
     </footer>
 
