--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -17,7 +17,7 @@
         <h1>WeatherBee</h1>
         <span id="url">https://weatherbee.io</span>
         <span id="subtitle">Website Planning Document</span>
-        
+
     </header>
 
     <nav>
@@ -36,8 +36,11 @@
         </section>
         <section>
             <h2>Purpose</h2>
-            <p>The purpose of WeatherBee is to provide a child-friendly weather website. Most weather websites are full of a lot of content and a lot of data. This can make it hard for little children to parse. WeatherBee is focused on keeping things simple and visually fun for young children.</p>
-            <p>The second purpose is to provide educational content for children who want to learn more about the weather.</p>
+            <p>The purpose of WeatherBee is to provide a child-friendly weather website. Most weather websites are full
+                of a lot of content and a lot of data. This can make it hard for little children to parse. WeatherBee is
+                focused on keeping things simple and visually fun for young children.</p>
+            <p>The second purpose is to provide educational content for children who want to learn more about the
+                weather.</p>
         </section>
         <section>
             <h2>Domain Name</h2>
@@ -50,8 +53,7 @@
     </main>
 
     <footer>
-        <div class="copyright">&copy; <span id="copyright-year"></span> | Lehi Sanchez | Maryland | <a
-                href="https://www.byui.edu/online">BYUI Learning Online</a></div>
+        <div class="copyright">&copy; <span id="copyright-year"></span> | Lehi Sanchez | Maryland | <a href="https://www.byui.edu/online">BYUI Learning Online</a></div>
         <div class="updated">Last updated: <span id="modified-date"></span></div>
     </footer>
 
