--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -17,7 +17,7 @@
         <h1>WeatherBee</h1>
         <span id="url">https://weatherbee.io</span>
         <span id="subtitle">Website Planning Document</span>
-        
+
     </header>
 
     <nav>
@@ -46,8 +46,7 @@
     </main>
 
     <footer>
-        <div class="copyright">&copy; <span id="copyright-year"></span> | Lehi Sanchez | Maryland | <a
-                href="https://www.byui.edu/online">BYUI Learning Online</a></div>
+        <div class="copyright">&copy; <span id="copyright-year"></span> | Lehi Sanchez | Maryland | <a href="https://www.byui.edu/online">BYUI Learning Online</a></div>
         <div class="updated">Last updated: <span id="modified-date"></span></div>
     </footer>
 
