--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Assignment portal for Lehi Sanchez in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
-
+  <link rel="shortcut icon" href="favicon.ico">
   <title>Lehi Sanchez | WDD-230 Assignment Portal</title>
 
   <link rel="stylesheet" href="css/normalize.css">
