--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -105,12 +105,17 @@
     </main>
 
     <footer>
+
         <section id="contact">
-            <h2>Contact Information</h2>
-            <p>Address</p>
-            <p>Email</p>
+            <div>
+                <h2>Contact Information</h2>
+                <p>1234 Acme Weather Lane<br>Boise, Idaho</p>
+                <p>contact@weatherbee.org</p>
+            </div>
+            <img src="images/map.png" alt="map">
         </section>
-        <div class="copyright">&copy; <span id="copyright-year"></span> | WeatherBee | Maryland | <a href="https://www.byui.edu/online">BYUI Learning Online</a></div>
+
+        <div class="copyright">&copy; <span id="copyright-year"></span> WeatherBee</div>
         <div class="updated">Last updated: <span id="modified-date"></span></div>
     </footer>
 
