--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -115,8 +115,7 @@
             <img src="images/map.png" alt="map">
         </section>
 
-        <div class="copyright">&copy; <span id="copyright-year"></span> WeatherBee</div>
-        <div class="updated">Last updated: <span id="modified-date"></span></div>
+        <div class="copyright">&copy; <span id="copyright-year"></span> WeatherBee.io | Last updated: <span id="modified-date"></span></div>
     </footer>
 
     <script src="js/scripts.js"></script>
