--- a/index.html
+++ b/index.html
@@ -37,7 +37,16 @@
   </footer>
 
   <script src="js/main.js"></script>
-
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+  <script>
+    WebFont.load({
+      google: {
+        families: [
+          'Lora'
+        ]
+      }
+    });
+  </script>
 </body>
 
 </html>
