--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -45,14 +45,21 @@
 
             <h2>Preston Idaho</h2>
 
-            <img src="images/sunflowers.jpg" alt="sunflowers">
+            <!-- <img src="images/sunflowers.jpg" alt="sunflowers"> -->
 
-            <img srcset="images/Hero_Image_200.jpg 200w,
-                         images/Hero_Imageelva-fairy-800w.jpg 800w"
-     sizes="(max-width: 600px) 480px,
-            800px"
-     src="elva-fairy-800w.jpg"
-     alt="Elva dressed as a fairy">
+            <picture>
+                <source media="(min-width: 1000px)" srcset="images/Hero_Image_1100.jpg">
+                <source media="(min-width: 600px)" srcset="images/Hero_Image_800.jpg">
+                <img src="images/Hero_Image_500.jpg" alt="Scenic view of sunrise.">
+            </picture>
+
+            <!-- <img srcset="images/Hero_Image_200.jpg 200w,
+                         images/Hero_Image_500.jpg 500w,
+                         images/Hero_Image_800.jpg 800w,
+                         images/Hero_Image_1100.jpg 1000w" 
+                 sizes="(max-width: 600px) 480px,800px" 
+                 src="images/Hero_Image_1100.jpg"
+                 alt="Landscape"> -->
 
             <div id="current-temperature">
                 <table>
@@ -68,7 +75,7 @@
                         </tr>
                         <tr>
                             <td>High:</td>
-                            <td><span id="currentTemperature">70</span>&deg; F</td>
+                            <td><span id="currentTemperature">30</span>&deg; F</td>
                         </tr>
                         <tr>
                             <td>Wind Chill:</td>
