--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -100,11 +100,11 @@
         <h2>5-Day Forecast</h2>
 
         <section id="forecast">
-            <div><span>Monday</span><img src="images/forecast_sun.png" alt="Sunny"></div>
-            <div><span>Tuesday</span><img src="images/forecast_sun.png" alt="Sunny"></div>
-            <div><span>Wednesday</span><img src="images/forecast_sun_snow.png" alt="Sunny"></div>
-            <div><span>Thursday</span><img src="images/forecast_sun.png" alt="Sunny"></div>
-            <div><span>Friday</span><img src="images/forecast_rain.png" alt="Sunny"></div>
+            <div><span>Monday</span><img src="images/forecast_sun.png" alt="Sunny"><span>50&deg;</span></div>
+            <div><span>Tuesday</span><img src="images/forecast_sun.png" alt="Sunny"><span>50&deg;</span></div>
+            <div><span>Wednesday</span><img src="images/forecast_sun_snow.png" alt="Sunny"><span>50&deg;</span></div>
+            <div><span>Thursday</span><img src="images/forecast_sun.png" alt="Sunny"><span>50&deg;</span></div>
+            <div><span>Friday</span><img src="images/forecast_rain.png" alt="Sunny"><span>50&deg;</span></div>
         </section>
 
         <section id="article">
