--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -4,12 +4,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lehi Sanchez | Progressive Loading</title>
+    <link rel="stylesheet" href="https://use.typekit.net/asr4epw.css">
     <link rel="stylesheet" href="css/main.css">
-</head>
+</head> 
 
 <body>
-    <script src="js/scripts.js"></script>
+    <main>
+        <h1>Lazy Loading Example</h1>
+        <picture>  
+            <img src="images/placeholder.png" data-src="https://images.unsplash.com/photo-1602685884514-c0c4d9e7e41d?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=400&ixlib=rb-1.2.1&q=80&w=300" alt="">
+        </picture>
+        <picture>  
+            <img src="images/placeholder.png" data-src="https://images.unsplash.com/photo-1602653076200-0a412912eabd?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=400&ixlib=rb-1.2.1&q=80&w=300" alt="">
+        </picture>
+        <picture>  
+            <img src="images/placeholder.png" data-src="https://images.unsplash.com/photo-1602506053933-92242de17ae0?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=400&ixlib=rb-1.2.1&q=80&w=300" alt="">
+        </picture>
+        <picture>  
+            <img src="images/placeholder.png" data-src="https://images.unsplash.com/photo-1602912325427-1ef05b34a23c?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=400&ixlib=rb-1.2.1&q=80&w=300" alt="">
+        </picture>
+        <picture>  
+            <img src="images/placeholder.png" data-src="https://images.unsplash.com/photo-1601462899177-b69b1b789a40?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=400&ixlib=rb-1.2.1&q=80&w=300" alt="">
+        </picture>
+        <picture>  
+            <img src="images/placeholder.png" data-src="https://images.unsplash.com/photo-1602933164876-8e952eb4f4ee?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=400&ixlib=rb-1.2.1&q=80&w=300" alt="">
+        </picture>
+    </main>
+    
+    <script src="js/scripts.js" defer></script>
+    
 </body>
 
 </html>
