--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
       <li>Lesson 03: <a href="lesson3/index.html">Website Planning Document</a></li>
       <li>Lesson 04: <a href="lesson4/preston-4.html">Preston Town Page</a></li>
       <li>Lesson 05: <a href="lesson5/preston-5.html">Preston Town Page Continued</a></li>
-      <li>Lesson 05: <a href="lesson6/preston-6.html">Preston Town Page (Responsive Image)</a></li>
+      <li>Lesson 06: <a href="lesson6/preston-6.html">Preston Town Page (Responsive Image)</a></li>
+      <li>Lesson 07: <a href="lesson7/lazyload.html">Progressive Image Loading</a></li>
     </ul>
   </main>
 
