--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <li>Lesson 05: <a href="lesson5/preston-5.html">Preston Town Page Continued</a></li>
       <li>Lesson 06: <a href="lesson6/preston-6.html">Preston Town Page (Responsive Image)</a></li>
       <li>Lesson 07: <a href="lesson7/lazyload.html">Progressive Image Loading</a></li>
+      <li>Lesson 07: <a href="lesson7/gallery-7.html">Gallery</a></li>
     </ul>
   </main>
 
