--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -33,6 +33,10 @@
     </main>
     
     <script src="js/scripts.js" defer></script>
+
+    <footer>
+        <div class="copyright">&copy; <span id="copyright-year"></span> WeatherBee.io | Last updated: <span id="modified-date"></span></div>
+    </footer>
     
 </body>
 
