--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>WeatherBee | Preston</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/small.css">
-    <link rel="stylesheet" href="css/medium.css">
+    <link rel="stylesheet" href="css/main.css">
+    <!-- <link rel="stylesheet" href="css/medium.css"> -->
     <!-- <link rel="stylesheet" href="css/large.css"> -->
 </head>
 
@@ -37,13 +37,13 @@
         </ul>
     </nav>
 
-    <main>
+    <main class="stormcenter">
         <div class="form-wrapper">
             <form method="get" action="thanks.html">
                 <fieldset>
                     <legend>Personal Information</legend>
 
-                    <label class="top"><span>Full Name*</span>
+                    <label class="top">Full Name*
                         <input type="text" name="fname" pattern="[A-Za-z]{5,}" placeholder="Full Name" required>
                     </label>
                     <label class="top">
