--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>WeatherBee | Preston</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/main.css">
-    <!-- <link rel="stylesheet" href="css/medium.css"> -->
-    <!-- <link rel="stylesheet" href="css/large.css"> -->
+    <link rel="stylesheet" href="css/small.css">
+    <link rel="stylesheet" href="css/medium.css">
+    <link rel="stylesheet" href="css/large.css">
 </head>
 
 <body>
@@ -37,78 +37,76 @@
         </ul>
     </nav>
 
-    <main class="stormcenter">
-        <div class="form-wrapper">
-            <form method="get" action="thanks.html">
-                <fieldset>
-                    <legend>Personal Information</legend>
+    <main>
+        <form method="get" action="thanks.html" id="StormCenterForm">
+            <fieldset>
+                <legend>Personal Information</legend>
 
-                    <label class="top">Full Name*
-                        <input type="text" name="fname" pattern="[A-Za-z]{5,}" placeholder="Full Name" required>
-                    </label>
-                    <label class="top">
-                        Email 
-                        <input type="email" name="email" placeholder="you@example.com">
-                    </label>
-                    <label class="top">Phone* <input type="tel" name="phone" placeholder="Phone" required></label>
-                    <label class="top">Zip Code* <input type="number" name="zip" placeholder="Zip Code" required></label>
-                </fieldset>
+                <label class="top">Full Name*
+                    <input type="text" name="fname" pattern="[A-Za-z]{5,}" placeholder="Full Name" required>
+                </label>
+                <label class="top">
+                    Email
+                    <input type="email" name="email" placeholder="you@example.com">
+                </label>
+                <label class="top">Phone* <input type="tel" name="phone" placeholder="Phone" required></label>
+                <label class="top">Zip Code* <input type="number" name="zip" placeholder="Zip Code" required></label>
+            </fieldset>
 
-                <fieldset>
-                    <legend>Storm Information</legend>
-                    <label class="top">Storm Date 
-                        <input type="date" name="stormdate">
-                    </label>
-                    <label class="top">Storm Severity
-                        <input list="stormtype" name="type">
-                        <datalist id="stormtype">
-                            <option value="Flash Flood">
-                            <option value="Hail">
-                            <option value="Hurricane">
-                            <option value="Thunderstorm">
-                            <option value="Tornado">
-                        </datalist>
-                    </label>
-                    <label class="top">Storm Severity Rating:
-                        <input type="range" id="rating" value="5" min="1" max="10" step="1" list="tickmarks"
-                            oninput="adjustRating(this.value)" onchange="adjustRating(this.value)">
-                        <span id="ratingvalue">5</span>
-                    </label>
-                    <datalist id="tickmarks">
-                        <option value="0">
-                        <option value="1">
-                        <option value="2">
-                        <option value="3">
-                        <option value="4">
-                        <option value="5">
-                        <option value="6">
-                        <option value="7">
-                        <option value="8">
-                        <option value="9">
-                        <option value="10">
+            <fieldset>
+                <legend>Storm Information</legend>
+                <label class="top">Storm Date
+                    <input type="date" name="stormdate">
+                </label>
+                <label class="top">Storm Type
+                    <input list="stormtype" name="type">
+                    <datalist id="stormtype">
+                        <option value="Flash Flood">
+                        <option value="Hail">
+                        <option value="Hurricane">
+                        <option value="Thunderstorm">
+                        <option value="Tornado">
                     </datalist>
-                    <label class="top">Storm Region
-                        <select name="subject" id="regions">
-                            <option value="">Select Region &#9662;</option>
-                            <option value="preston">Preston</option>
-                            <option value="sodasprings">Soda Springs</option>
-                            <option value="fishhaven">Fish Haven</option>
-                        </select>
-                    </label>
-                    <div>User in danger?</div>
-                    <label class="sbs"><input type="radio" name="danger" value="yes"> Yes</label>
-                    <label class="sbs"><input type="radio" name="danger" value="maybe"> Maybe</label>
-                    <label class="sbs"><input type="radio" name="danger" value="no"> No</label>
-                </fieldset>
+                </label>
+                <label class="top">Storm Severity Rating:
+                    <input type="range" id="rating" value="5" min="1" max="10" step="1" list="tickmarks"
+                        oninput="changeRating(this.value)" onchange="changeRating(this.value)">
+                    <span id="currentRating">5</span>
+                </label>
+                <datalist id="tickmarks">
+                    <option value="0">
+                    <option value="1">
+                    <option value="2">
+                    <option value="3">
+                    <option value="4">
+                    <option value="5">
+                    <option value="6">
+                    <option value="7">
+                    <option value="8">
+                    <option value="9">
+                    <option value="10">
+                </datalist>
+                <label class="top">Storm Region
+                    <select name="subject" id="regions">
+                        <option value="">Select Region &#9662;</option>
+                        <option value="fishhaven">Fish Haven</option>
+                        <option value="preston">Preston</option>
+                        <option value="sodasprings">Soda Springs</option>
+                    </select>
+                </label>
+                <div>User in danger?</div>
+                <label class="sbs"><input type="radio" name="danger" value="yes"> Yes</label>
+                <label class="sbs"><input type="radio" name="danger" value="maybe"> Maybe</label>
+                <label class="sbs"><input type="radio" name="danger" value="no"> No</label>
+            </fieldset>
 
-                <fieldset>
-                    <legend>Additional Information</legend>
-                    <label class="top">Comments: <textarea name="additional"></textarea></label>
-                </fieldset>
+            <fieldset>
+                <legend>Additional Information</legend>
+                <label class="top">Comments: <textarea name="additional"></textarea></label>
+            </fieldset>
 
-                <input type="submit" value="Report" class="submitBtn">
-            </form>
-        </div>
+            <input type="submit" value="Submit" class="submit-button">
+        </form>
     </main>
 
     <footer>
