--- a/lesson8/thanks.html
+++ b/lesson8/thanks.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/large.css">
 </head>
+
 <body>
 
     <header>
@@ -30,28 +32,31 @@
             <li><a href="#">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#">Fish Haven</a></li>
-            <li><a class="active" href="#">Storm Center</a></li>
+            <li><a href="#">Storm Center</a></li>
             <li><a href="#">Gallery</a></li>
         </ul>
     </nav>
 
-    <main>
-
+    <main class="thankyou">
+        <h1>Thank you!</h1>
+        <p>We appreciate your feedback!</p>
+        <p><a href="stormcenter.html">Click Here</a> to return to Storm Center Form.</p>
     </main>
 
     <footer>
-        <div class="copyright">&copy; <span id="copyright-year"></span> WeatherBee.io | Last updated: <span id="modified-date"></span></div>
+        <div class="copyright">&copy; <span id="copyright-year"></span> WeatherBee.io | Last updated: <span
+                id="modified-date"></span></div>
     </footer>
 
     <script src="js/scripts.js" defer></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script>
-      WebFont.load({
-        google: {
-          families: ['Open Sans', 'Roboto']
-        }
-      });
+        WebFont.load({
+            google: {
+                families: ['Open Sans', 'Roboto']
+            }
+        });
     </script>
-    
+
 </body>
