--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
       <li>Lesson 06: <a href="lesson6/preston-6.html">Preston Town Page (Responsive Image)</a></li>
       <li>Lesson 07: <a href="lesson7/lazyload.html">Progressive Image Loading</a></li>
       <li>Lesson 07: <a href="lesson7/gallery-7.html">Gallery</a></li>
-      <li>Lesson 08: <a href="lesson8/tablebuild.html">Table</a></li>
-
+      <li>Lesson 08: <a href="lesson8/tablebuild.html">Table</a> | <a href="lesson8/stormcenter.html">Storm Center Form</a></li>
     </ul>
   </main>
 
