--- a/lesson9-weather/thanks.html
+++ b/lesson9-weather/thanks.html
@@ -29,16 +29,19 @@
 
     <nav>
         <ul id="navigation">
-            <li><a href="#" class="active">Home</a></li>
-            <li><a href="preston-6.html">Preston</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#">Fish Haven</a></li>
-            <li><a href="stormcenter.html">Storm Center</a></li>
-            <li><a href="gallery-7.html">Gallery</a></li>
+            <li><a href="#">Storm Center</a></li>
+            <li><a href="#">Gallery</a></li>
         </ul>
     </nav>
 
     <main>
+        <h1>Thank you!</h1>
+        <p>We appreciate your feedback!</p>
+        <p><a href="stormcenter.html">Click Here</a> to return to Storm Center Form.</p>
     </main>
 
     <footer>
