--- a/lesson9-weather/index.html
+++ b/lesson9-weather/index.html
@@ -39,6 +39,25 @@
     </nav>
 
     <main>
+
+        <picture>
+            <source media="(min-width: 1200px)" srcset="images/Banner_Image_1200.jpg">
+            <source media="(min-width: 800px)" srcset="images/Banner_Image_800.jpg">
+            <img src="images/Banner_Image_500.jpg" alt="Scenic view of sunrise.">
+        </picture>
+
+        <section class="town-cards">
+
+        </section>
+
+        <section id="contact">
+            <div>
+                <h2>Contact Information</h2>
+                <p>1234 Acme Weather Lane<br>Boise, Idaho</p>
+                <p>contact@weatherbee.org</p>
+            </div>
+            <img src="images/map.png" alt="map">
+        </section>
     </main>
 
     <footer>
@@ -46,6 +65,7 @@
     </footer>
 
     <script src="js/scripts.js" defer></script>
+    <script src="js/home.js" defer></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script>
