--- a/lesson9/prophets.html
+++ b/lesson9/prophets.html
@@ -13,9 +13,7 @@
         <h1>Latter-day Prophets</h1>
     </header>
     <main>
-        <div class="cards">
-
-        </div>
+        <div class="cards"></div>
     </main>
     <footer>
         Lehi Sanchez | BYU-Idaho | WDD 230
