--- a/lesson9-weather/gallery-7.html
+++ b/lesson9-weather/gallery-7.html
@@ -4,12 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>WeatherBee | Preston</title>
+    <title>WeatherBee | Gallery</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <!-- <link rel="stylesheet" href="css/small.css">
+    <link rel="stylesheet" href="css/small.css">
     <link rel="stylesheet" href="css/medium.css">
-    <link rel="stylesheet" href="css/large.css"> -->
+    <link rel="stylesheet" href="css/large.css">
 </head>
 
 <body>
