--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
       <li>Lesson 07: <a href="lesson7/lazyload.html">Progressive Image Loading</a></li>
       <li>Lesson 07: <a href="lesson7/gallery-7.html">Gallery</a></li>
       <li>Lesson 08: <a href="lesson8/tablebuild.html">Table</a> | <a href="lesson8/stormcenter.html">Storm Center Form</a></li>
-      <li>Lesson 09: <a href="lesson9/prophets.html">Prophet Cards</a></li>
+      <li>Lesson 09: <a href="lesson9/prophets.html">Prophet Cards</a> | <a href="lesson9-weather/index.html">Weather Site Homepage</a></li>
+
     </ul>
   </main>
 
