--- a/lesson9-weather/preston-6.html
+++ b/lesson9-weather/preston-6.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>WeatherBee | Preston</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <!-- <link rel="stylesheet" href="css/small.css">
+    <link rel="stylesheet" href="css/small.css">
     <link rel="stylesheet" href="css/medium.css">
-    <link rel="stylesheet" href="css/large.css"> -->
+    <link rel="stylesheet" href="css/large.css">
 </head>
 
 <body>
