--- a/lesson9-weather/index.html
+++ b/lesson9-weather/index.html
@@ -45,9 +45,9 @@
             <img src="images/Banner_Image_500.jpg" alt="Scenic view of sunrise.">
         </picture>
 
-        <section class="town-cards">
+        <div class="town-cards">
 
-        </section>
+        </div>
 
         <section id="article">
             <img src="images/child.jpg" alt="child">
