--- a/lesson9-weather/index.html
+++ b/lesson9-weather/index.html
@@ -67,7 +67,7 @@
     </main>
 
     <footer>
-        <div class="copyright">&copy; <span id="copyright-year"></span> WeatherBee.io | Last updated: <span id="modified-date"></span></div>
+        <div class="copyright">&copy; <span id="copyright-year"></span> WeatherBee.io | Last updated: <span id="modified-date"></span> | <a href="home-wireframes.html">Wireframes</a></div>
     </footer>
 
     <script src="js/scripts.js" defer></script>
