--- a/lesson9-weather/home-wireframes.html
+++ b/lesson9-weather/home-wireframes.html
@@ -16,7 +16,15 @@
     </header>
 
     <main>
-
+        <picture>
+            <img src="images/Wireframe_Small.jpg" alt="Small Wireframe">
+        </picture>
+        <picture>
+            <img src="images/Wireframe_Medium.jpg" alt="Small Wireframe">
+        </picture>
+        <picture>
+            <img src="images/Wireframe_Large.jpg" alt="Small Wireframe">
+        </picture>
     </main>
 
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
